# LeetCode-solved

./: .gitignore  LeetCode-solved.sln  README.md  estructura_leetcode_solved.txt  package-lock.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: c.yml  cpp.yml  csharp.yml  go.yml  java.yml  javascript.yml  polyglot.yml  python.yml  rust.yml  typescript.yml
configs/go/: go.mod
configs/javascript/: tsconfig.json
problems/: polyglot_runner.py  space_journey.md  the_hero_power.txt
problems/13_roman_to_Integer/: 13_roman_to_integer.md  roman_to_integer.c  roman_to_integer.cpp  roman_to_integer.css  roman_to_integer.go  roman_to_integer.java  roman_to_integer.js  roman_to_integer.md  roman_to_integer.py  roman_to_integer.rs
problems/13_roman_to_Integer/desktop_app/roman_engine/: Cargo.toml
problems/13_roman_to_Integer/desktop_app/roman_engine/src/: converter.rs  lib.rs  validator.rs
problems/13_roman_to_Integer/desktop_app/roman_engine/src/algorithms/: left_to_right.rs  mod.rs  right_to_left.rs
problems/14_Longest_Common_Prefix/: 14_Longest_Common_Prefix.md  longest_common_prefix.c  longest_common_prefix.cpp  longest_common_prefix.go  longest_common_prefix.java  longest_common_prefix.js  longest_common_prefix.py  longest_common_prefix.rs
problems/20_valid_parentheses/: 20_valid_parentheses.md  valid_parentheses.c  valid_parentheses.java  valid_parentheses.js
problems/21_merge_two_sorted_lists/: 21_merge_two_sorted_list.md  merge_two_sorted_list.c  merge_two_sorted_list.go  merge_two_sorted_list.java  merge_two_sorted_list.rs  problem.yml  (+2 more)
(+61 files in other folders)
