[package]
name = "roman_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# No external dependencies needed for core functionality
# Using only std library for maximum safety and minimal attack surface

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
